# lightning-nodes-api

./: .env.example  .gitignore  Cargo.toml  README.md  start_db.sh  stop_db.sh
migrations/: 20250524140308_create_nodes_table.sql
src/: lib.rs  main.rs
src/handlers/: mod.rs  nodes.rs
src/models/: node.rs
src/repositories/: mod.rs  node_repository.rs
src/routes/: get_json.rs  hello_world.rs  mod.rs
src/services/: api_client.rs  mod.rs  scheduler.rs
