[package]
name = "lightning_nodes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = "0.8.6"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
